2009-04-07  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/x86_64/strchrnul.S: New file.

	* crypt/Makefile (LDLIBS-crypt.so): Use this variable instead of
	depending libcrypt on -lfreebl3.

	* sysdeps/unix/sysv/linux/kernel-features.h: Power also has
	preadv/pwritev in 2.6.30.

	* resolv/res_hconf.c (_res_hconf_trim_domain): Use strcasecmp
	instead of __strcasecmp.
	* resolv/nss_dns/dns-host.c (getanswer_r): Likewise.

	* string/stratcliff.c (do_test): Add memchr tests..
	* wcsmbs/wcsatcliff.c (MEMCHR): Define.
	* sysdeps/x86_64/memchr.S: Fix handling of end of buffer after
	first read quad word.

2009-04-06  Ulrich Drepper  <drepper@redhat.com>

	* string/strverscmp.c (__strverscmp): Fix last cleanups.
	* string/tst-svc.input: Add new test case.
	* string/tst-svc.expect: Adjust.
	* string/Makefile: Don't ignore tst-svc error.

	* sysdeps/x86_64/memchr.S: New file.

	* resolv/resolv.h (RES_SNGLKUP): Define.
	* resolv/res_init.c (res_setoptions): Recognize single-request option.
	* resolv/res_send.c (send_dg): If we sent two requests at once and
	only get one reply before timeout switch to mode where we send the
	second request only after the first answer has been received.

2009-04-05  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/x86_64/strlen.S: Optimize by using SSE2 instructions.
	* sysdeps/x86_64/strchr.S: Likewise.

2009-04-03  Ulrich Drepper  <drepper@redhat.com>

	* configure.in: We need to test for the compiler earlier.

	* misc/Makefile (routines): Add preadv, preadv64, pwritev, pwritev64.
	* misc/Versions: Export preadv, preadv64, pwritev, pwritev64 for
	GLIBC_2.10.
	* misc/sys/uio.h: Declare preadv, preadv64, pwritev, pwritev64.
	* sysdeps/unix/sysv/linux/kernel-features.h: Add entries for preadv
	and pwritev.
	* misc/preadv.c: New file.
	* misc/preadv64.c: New file.
	* misc/pwritev.c: New file.
	* misc/pwritev64.c: New file.
	* sysdeps/posx/preadv.c: New file.
	* sysdeps/posx/preadv64.c: New file.
	* sysdeps/posx/pwritev.c: New file.